--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,7 @@ Assets/Chronos.meta
 Assets/PlayMaker/Editor/Resources/EditorStartupPrefs.asset
 
 Assets/Dr.Polarity/Vossen_Josh/Scene/Level 3 Boiler Room Updated.meta
+
+Assets/Dr.Polarity/Smith_Blake/Audio.meta
+
+Assets/Dr.Polarity/Smith_Blake/scripts.meta
